# framestoryx

./: README.md  pyproject.toml
framestoryx/: video_describer.py
tests/: test_video_describer.py
