[project]
name = "framestoryx"
version = "0.1.0"
description = "An extended version of FrameStory, for creating video descriptions."
authors = [
    {name = "Keerthana Rajesh Kumar", email = "grittypuffy@riseup.net"},
    {name = "Eugene Evstafev", email = "chigwel@gmail.com"},
]
dependencies = [
    "numpy>=2.3.5",
    #    "setuptools>=80.9.0",
    #    "Pillow>=8.0,<9",
    #    "numpy>=1.19,<2",
    #    "opencv-python>=4.0,<5",
    #    "requests>=2.25,<3",
    #    "tqdm>=4.0,<5",
    #    "transformers>=4.0,<5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/fossiaorg/framestoryx"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
